<resources>
    <string name="app_name">FirebasePDFStorage02</string>
    <string name="no_fle_is_selected">NO FLE IS SELECTED</string>
    <string name="select_file">SELECT FILE</string>
    <string name="upload_file">UPLOAD FILE</string>
    <string name="fetch_files">FETCH FILES</string>
    <string name="textview">TextView</string>
    <string name="enter_the_name_of_document">ENTER THE NAME OF DOCUMENT</string>
</resources>
